<resources>
    <string name="app_name">MyFiziq</string>
    <string name="go">Go</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="delete_avatar">Delete Scan?</string>
    <string name="error_delete_msg">Failed to delete avatar. Please try again later</string>
    <string name="permanent_delete">This action cannot be undone.</string>
    <string name="wait_delete">Deleting avatar..</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="signing_in">Signing in…</string>
    <string name="sign_in_failed_title">Login failed</string>
    <string name="sign_in_failed">The email address that you\'ve entered doesn\'t match any account. Please sign up or try again with a valid email.</string>
    <string name="sign_in_failed_wrong_time">The email address that you\'ve entered doesn\'t match any account.\n\nWe detected that your mobile device\'s clock or timezone may be incorrect. This may be preventing you from signing in.\n\nPlease check that both the clock and timezone set on your mobile device is correct.</string>
    <string name="sign_in_failed_unknown">Please ensure you are connected to the internet and try again.</string>
    <string name="sign_in_failed_wrong_username">User not found. Please register first.</string>
    <string name="sign_in_failed_wrong_password">Incorrect password.</string>
    <string name="register_progress">Registering…</string>
    <string name="register_failed_already_exists">Registration failed, account already exists.</string>
    <string name="register_failed">Failed to register the user. Please try again.</string>
    <string name="details_updated">Profile details have been updated</string>
    <string name="error_update_profile">Error updating user profile</string>
    <string name="no_change_profile">No changes to user profile</string>
    <string name="thanks_caps">THANKS</string>
    <string name="sign_out">Sign out</string>
    <string name="error_emptyfirstname">First Name cannot be empty</string>
    <string name="error_emptylastname">Last Name cannot be empty</string>
    <string name="error_emptydateofbirth">Date of Birth cannot be empty</string>
    <string name="error_emptygender">A Gender must be selected</string>
    <string name="error_emptyemailaddress">Please enter an email address.</string>
    <string name="error_notvalidemailaddress">Please enter a valid email address.</string>
    <string name="error_emptypassword">Please enter a password</string>
    <string name="error_emptyconfirmpassword">Confirm Password can not be empty</string>
    <string name="error_tooshortpassword">Please enter a valid password (must be 6 or more characters).</string>
    <string name="error_passwordnomatch">Passwords do not match</string>
    <string name="error_emptyemailcode">Email Code cannot be empty</string>
    <string name="welcome">Welcome.</string>
    <string name="welcome_description">Body measurements &amp; composition using your smartphone.</string>
    <string name="login_caps">LOGIN</string>
    <string name="join_caps">JOIN</string>
    <string name="continue_caps">CONTINUE</string>
    <string name="email">Email</string>
    <string name="from">From</string>
    <string name="message">Message</string>
    <string name="login_details">Login Details</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_profile">Save Profile</string>
    <string name="old_password">Old Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="forgot_password_reset_headerText">Please check your email for the 6-digit code and set a new password.</string>
    <string name="forgot_password_headerText">Please enter your login email address below.</string>
    <string name="forgot_password_error_checkEmailAddress">Please check your email address</string>
    <string name="forgot_password_reset_successful_title">Password reset successful!</string>
    <string name="forgot_password_reset_successful_message">You can now login using your new password.</string>
    <string name="forgot_password_reset_error_generic">Failed to reset password</string>
    <string name="forgot_password_reset_error_code_expired">Email Code has expired. Please try resetting your password again.</string>
    <string name="forgot_password_reset_error_no_intent">Forgot password reset details not received</string>
    <string name="notification_category_errors">Errors</string> <!-- notification_category_errors will appear as the Notification Category Title in the "App Info" screen for MyFiziq in Android -->
    <string name="error_title">We were unable to upload your avatar</string>
    <string name="error_upload_failed">Please make sure you\'re connected to the internet.</string>
    <string name="internal">Internal</string>
    <string name="experimental">Experimental</string>
    <string name="developer">Developer</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="visualize_pose">Visualize Pose</string>
    <string name="always_pass_inspection">Always Pass Inspection</string>
    <string name="practise_mode">Practise Mode</string>
    <string name="view_avatar_insights">View Avatar Insights</string>
    <string name="ethnicity_selection">Ethnicity Selection</string>
    <string name="guest_users">Guest Users</string>
    <string name="adjust_values">Adjust Measurement Values</string>
    <string name="hide_samples">Hide Track Samples</string>
    <string name="partner_demo">Partner Demo</string>
    <string name="error_cannotdownloadresources_message">Cannot download remote assets. Please make sure you\'re connected to the internet and try again.</string>
    <string name="error_app_config">Unable to download the application configuration, please check your internet connection and try again.</string>
    <string name="error">Error</string>
</resources>
