<com.myfiziq.sdk.views.BackgroundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MFSViewFormLinearLayout">

    <TextView
        android:id="@+id/reason_title"
        style="@style/MFSViewFormTitleLabel" />

    <TextView
        android:id="@+id/troubleCaptureTitle"
        style="@style/MFSErrorFormTitle" />

    <FrameLayout
        android:id="@+id/spinner_frame"
        style="@style/MFSViewSpinnerFrameLayout">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            style="@style/MFSViewSpinnerLayout" />

    </FrameLayout>

    <TextView
        android:id="@+id/full_name_title"
        style="@style/MFSViewFormTitleLabel"
        android:text="@string/from" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameField"
        style="@style/MFEditTextStyle.Support"
        android:layout_marginTop="0dp"
        android:focusable="true"
        android:hint="@string/name"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:inputType="textPersonName|textCapWords" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailField"
        style="@style/MFEditTextStyle.Support"
        android:focusable="true"
        android:hint="@string/email"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/MFSViewFormTitleLabel"
        android:text="@string/message" />

    <com.myfiziq.sdk.views.ScrollableEditText
        android:id="@+id/messageText"
        style="@style/MFSEditMultiLineTextStyle.ViewSupportForm"
        tools:ignore="UnusedAttribute" />

    <TextView style="@style/MFSViewAgreement" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <CheckBox
            android:id="@+id/checkboxTerms"
            style="@style/MFSViewCheckbox" />

        <com.myfiziq.sdk.views.TintableButton
            android:id="@+id/btnContinue"
            style="@style/MFButton.ViewSupportButton" />

        <ProgressBar
            android:id="@+id/btnProgressBar"
            style="@style/MFSViewProgressBar" />

    </FrameLayout>

</com.myfiziq.sdk.views.BackgroundLinearLayout>


