<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarMaster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="none">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme.v2"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView style="@style/MFICreateAvatarScrollForm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/dateOfBirthHeading"
                style="@style/MFIDateOfBirthLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateOfBirthContainer"
                style="@style/MFTextInputStyle.BirthDateForm"
                tools:ignore="HardcodedText">
                <!-- Leave a space in the TextInputLayout hint for a blank label but keep a hint in the EditText when there is no input -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateOfBirth"
                    style="@style/MFEditTextStyle.BirthDateForm"
                    tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView style="@style/MFIGenderLabel" />

            <LinearLayout
                android:id="@+id/genderGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <LinearLayout style="@style/MFRadioButtonContainer.MaleForm">

                    <RadioButton
                        android:id="@+id/genderMale"
                        style="@style/MFIRadioButtonMaleForm" />

                </LinearLayout>

                <LinearLayout style="@style/MFRadioButtonContainer.FemaleForm">

                    <RadioButton
                        android:id="@+id/genderFemale"
                        style="@style/MFIRadioButtonFemaleForm" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/saveProfileButton"
                style="@style/MFButton.CreateAvatarButton"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/save_profile" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false">

                <TextView
                    android:id="@+id/headerTitle"
                    android:text="@string/login_details"
                    style="@style/MFIDateOfBirthLabel"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/oldPasswordContainer"
                    style="@style/MFTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/single_space"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/headerTitle"
                    tools:ignore="HardcodedText"
                    app:passwordToggleEnabled="true">
                    <!-- Leave a space in the TextInputLayout hint for a blank label but keep a hint in the EditText when there is no input -->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/oldPasswordEditText"
                        style="@style/MFEditTextStyle"
                        android:focusable="true"
                        android:hint="@string/old_password"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordContainer"
                    style="@style/MFTextInputStyle"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText"
                    android:hint="@string/single_space"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/oldPasswordContainer"
                    app:passwordToggleEnabled="true">
                    <!-- Leave a space in the TextInputLayout hint for a blank label but keep a hint in the EditText when there is no input -->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        style="@style/MFEditTextStyle"
                        android:focusable="true"
                        android:hint="@string/password"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="textPassword"
                        tools:ignore="UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordContainer"
                    style="@style/MFTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:ignore="HardcodedText"
                    android:hint="@string/single_space"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
                    app:passwordToggleEnabled="true">
                    <!-- Leave a space in the TextInputLayout hint for a blank label but keep a hint in the EditText when there is no input -->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordEditText"
                        style="@style/MFEditTextStyle"
                        android:focusable="true"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="textPassword"
                        tools:ignore="UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/resetPasswordButton"
                    style="@style/MFButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/reset_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPasswordContainer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

