<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme.v2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:fadingEdgeLength="60dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/loginDetailsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etxtUsernameContainer"
                style="@style/MFTextInputStyle"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/single_space"
                app:layout_constraintTop_toBottomOf="@+id/loginDetailsHeading">
                <!-- Leave a space in the TextInputLayout hint for a blank label but keep a hint in the EditText when there is no input -->

                <EditText
                    android:id="@+id/etxtEmailAddress"
                    style="@style/MFEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:focusable="true"
                    android:hint="@string/email"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/etxtUsernameContainer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etxtPasswordContainer"
                style="@style/MFTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/single_space"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/passwordHeading">
                <!-- Leave a space in the TextInputLayout hint for a blank label but keep a hint in the EditText when there is no input -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxtPassword"
                    style="@style/MFEditTextStyle"
                    android:autofillHints="password"
                    android:focusable="true"
                    android:hint="@string/password"
                    android:imeOptions="actionGo|flagNoExtractUi"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.myfiziq.sdk.views.TintableButton
                android:id="@+id/btnLogin"
                style="@style/MFButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/login_caps"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxtPasswordContainer" />

            <!-- TODO Implement -->
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/myfiziqsdk_black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>